# implementation-challenges

./: README.md  pyproject.toml
.github/workflows/: unit-tests.yml
challenges/: QeMCMC-challenge.md  VQA_Knapsack_challenge.md  VQA_QChem_challenge.md
challenges/QNN_MNIST/: QNN_MNIST_0_1_challenge_rewrite.md  QNN_MNIST_challenge.md  pyproject.toml
challenges/Qiskit-ibm-runtime/: ibm_runtime_challenge.md  pyproject.toml
challenges/VQA-Knapsack/: pyproject.toml
challenges/VQA_QChem/: pyproject.toml
notebooks/: CH4-dataset.ipynb  MNIST-dataset.ipynb  ibm-runtime.ipynb  qemcmc_mis_reference_solution.ipynb
results/data/: all_summary.csv  all_traces.csv  graph_5_summary.csv  graph_5_traces.csv  graph_8_summary.csv  graph_8_traces.csv
scripts/: run_experiments.py
solutions/knapsack/src/: knapsack.py
solutions/knapsack/tests/: test_knapsack.py
solutions/vqe_qchem/src/: ham_sdk_conversion.py  plotting.py  vqa_hydroxide.py
src/: knapsack.py
src/qemcmc_mis/: __init__.py  classical_mcmc.py  experiments.py  graphs.py  mis.py  plotting.py  quantum_proposal.py
tests/: test_knapsack.py  test_main.py  test_quantum_proposal.py
