[project]
name = "iqucodefest-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "fsspec>=2026.4.0",
    "h5py>=3.16.0",
    "pennylane>=0.45.0",
    "qiskit>=2.4.1",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.13"]

[tool.pytest]
pythonpath = ["src"]
