[project]
name = "iqucodefest-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ipython>=9.13.0"]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.13"]

[tool.pytest]
pythonpath = ["src"]

[tool.uv.workspace]
members = ["challenges/**"]
